--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
         <h3>Select Profile Image:</h3>
         <select id="profileImageSelect" onchange="updateProfileImage()">
             <option value="Image/user-placeholder.png">Default Image</option>
-            <option value="Image/ompha.jpeg">Image 1</option>
-            <option value="Image/magau.jpeg">Image 2</option>
-            <option value="Image/oscar.jpeg">Image 3</option>
+            <option value="Image/ompha.jpeg">ompha</option>
+            <option value="Image/magau.jpeg">magau</option>
+            <option value="Image/oscar.jpeg">oscar</option>
         </select>
         <button onclick="goBack()">Back</button>
     </div>
